--- a/site-senac/package.json
+++ b/site-senac/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.0",
+    "@fortawesome/free-brands-svg-icons": "^6.7.0",
+    "@fortawesome/free-regular-svg-icons": "^6.7.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@iconscout/react-unicons": "^2.0.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "bulma": "^1.0.2",
