--- a/site-senac/package.json
+++ b/site-senac/package.json
@@ -17,22 +17,25 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@iconscout/react-unicons": "^2.0.2",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
     "bulma": "^1.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "site-senac": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss": "^8.4.49",
     "sass": "^1.81.0",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
   }
 }
